--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -73,6 +73,7 @@
 
 .search__page-result-snippet{
     margin-top: 10px;
+    color:#4d5156;
 }
 
 .search__page-result-img{
@@ -80,4 +81,11 @@
     height: 20px;
     width: 20px;
     margin-right: 10px;
+}
+
+.search__page-link{
+    color: black;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
