--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -1,3 +1,6 @@
+*{
+  overflow-x: hidden;
+}
 .search__page-logo {
   object-fit: contain;
   height: 50px;
@@ -8,18 +11,36 @@
   display: flex;
   position: sticky;
   z-index: 100;
-  background-color: white;
   top: 0;
+  background-color: white;
   padding: 30px;
   border-bottom: 1px solid lightgray;
+  flex-direction: column;
 }
 
-.search__page-header-body > .search > .search__input {
+.search__page-top{
+  display: flex;
+  width: 100%;
+}
+
+.search__page-header > .search__page-top > .search {
+  width: 70%;
+  max-width: 765px;
+}
+
+.search__page-header > .search__page-top > .search > .search__input {
   margin-top: 0;
   width: unset;
   margin: unset;
   max-width: unset;
+  overflow: hidden;
 }
+
+.search__page-header-body{
+  margin-left: 200px;
+  width: 70%;
+}
+
 
 .search__page-options {
   display: flex;
@@ -46,7 +67,7 @@
 .search__page-option {
   display: flex;
   align-items: center;
-  margin-right: 20px;
+  padding-right: 20px;
 }
 
 .search__page-result-title {
@@ -67,25 +88,50 @@
 .search__page-results {
   max-width: 650px;
   margin-top: 20px;
-  margin-left: 240px;
+  margin-left: 230px;
   margin-bottom: 100px;
+  width: 100%;
 }
 
-.search__page-result-snippet{
-    margin-top: 10px;
-    color:#4d5156;
+.search__page-result-snippet {
+  margin-top: 10px;
+  color: #4d5156;
 }
 
-.search__page-result-img{
-    object-fit: contain;
-    height: 20px;
-    width: 20px;
-    margin-right: 10px;
+.search__page-result-img {
+  object-fit: contain;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
 }
 
-.search__page-link{
-    color: black;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
+.search__page-link {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+ .search__page-option{
+  font-size: 14px;
+ }
+
+ .search__page-header-body{
+  margin-left: unset;
+  width: 100%;
+ }
+
+ .search__page-options-right{
+  margin-left: 40px;
+ }
+ .search__page-logo{
+  margin-right: 30px;
+ }
+ .search__page-results{
+  margin-left: 10%;
+ }
+ .search__page-result{
+  margin: 30px 0;
+ }
 }
