--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -70,6 +70,7 @@
   padding-right: 20px;
 }
 
+
 .search__page-result-title {
   text-decoration: none;
 }
@@ -104,12 +105,12 @@
   width: 20px;
   margin-right: 10px;
 }
-
+.search__page-link-wrapper{
+  display: flex;
+}
 .search__page-link {
   color: black;
   text-decoration: none;
-  display: flex;
-  align-items: center;
 }
 
 @media (max-width: 768px) {
