--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -79,6 +79,7 @@
 }
 .search__page-result-title > h2 {
   font-weight: 500;
+  display: inline-block;
 }
 .search__page-result-count {
   color: #70757a;
